# rua

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: auto-tag-version.yml  build-matrix.yml  ci.yml  size-budget.yml  smoke-platform.yml
benchmarks/: README.md  build_haskell.sh  run_hyperfine.sh
benchmarks/haskell/: Fib.hs  SumLoop.hs
benchmarks/lua/: fib.lua  sum_loop.lua
benchmarks/rua/: fib.rua  sum_loop.rua
crates/rua_capi/: Cargo.toml
crates/rua_capi/include/: rua.h
crates/rua_capi/src/: lib.rs
crates/rua_cli/: Cargo.toml
crates/rua_cli/src/: main.rs
crates/rua_vm/: Cargo.toml
crates/rua_vm/src/: error.rs  gc.rs  lib.rs  value.rs  vm.rs
docs/: SECURITY_FUZZING.md  STDLIB_COMPAT.md
examples/: 01_arith_if.rua  02_closure_capture.rua  03_records_with_update.rua  04_metatable_show.rua  05_receive_basic.rua  06_receive_after.rua  07_fn_block_locals.rua  08_list_literal.rua  09_counter_server_supervised.rua  10_monitor_and_down.rua  11_registry_router.rua  12_native_module_require.rua  13_pure_functional_pipeline.rua  14_unsafe_ffi_host_call.rua
examples/modules/: config.rua
src/: ast.rs  bytecode.rs  lexer.rs  lib.rs  parser.rs  token.rs
src/frontend/: compiler.rs  error.rs  mod.rs
src/ir/: constant.rs  function.rs  ids.rs  instr.rs  mod.rs  module.rs  pattern.rs  receive.rs
tests/: malformed_bytecode.rs
